...
    @Binding var isShowingNewGripSheet: Bool
    @StateObject var errorMessages = ErrorMessages()
    
    var body: some View {
        NavigationStack {
            GripEditForm(grip: $newGrip, errorMessages: errorMessages)
                .navigationTitle("Add Grip")
                .navigationBarTitleDisplayMode(.inline)
                .toolbar {
                    ToolbarItem(placement: .cancellationAction) {
                        Button("Cancel") {
                            isShowingNewGripSheet = false
                        }
...
                        Button("Add") {
                            if gripIsValidated(grip: newGrip, errorMessages: errorMessages) {
                                newGrip.saveAsGrip(workout: workout, context: moc)
                                isShowingNewGripSheet = false
                            }
                        }
                        .accessibilityLabel("Confirm Add Grip")
                    }
                }
        }
    }
}

...
