...
                Label("Start Workout", systemImage: "play.fill")
                    .font(.headline)
                    .foregroundColor(.blue)
            }
            // Disable link if there are no grips in the workout yet
            .disabled(gripsArray.count <= 0)
            .accessibilityIdentifier("startWorkoutLink")
            
            HStack {
                Label("Length", systemImage: "clock")
                Spacer()
                Text(secondsToLongString(seconds: gripsArray.totalSeconds))
                    .foregroundColor(Color(.systemGray))
            }
            
            Section {
                NavigationLink(destination: WorkoutGripsView(workout: workout)) {
                    SectionRow(title: "Grips", text: "\(workout.gripArray.count) added")
                }
                .accessibilityIdentifier("addGripsNavLink")
            } header: {
                Text("Workout Grips")
            } footer: {
                Text("At least one grip must be added to start workout")
            }
            
...
