...
        let controller = PersistenceController(inMemory: true)
        
        let workoutType1 = WorkoutType(context: controller.container.viewContext)
        workoutType1.name = "powerEndurance"
        
        let workout1 = Workout(context: controller.container.viewContext)
        workout1.name = "Test Workout"
        workout1.descriptionText = "Test Description"
        workout1.createdDate = Date()
        workout1.workoutType = workoutType1
        
        return controller
    }()
...
